--- a/vue相关/vue-resource/package.json
+++ b/vue相关/vue-resource/package.json
@@ -20,6 +20,7 @@
     "mockjs": "^1.0.1-beta3",
     "normalize.css": "^8.0.0",
     "nprogress": "^0.2.0",
+    "underscore": "^1.8.2",
     "vue": "^2.5.2",
     "vue-countup-v2": "^1.0.3",
     "vue-countupjs": "^1.0.0",
