--- a/vue相关/vue-resource/package.json
+++ b/vue相关/vue-resource/package.json
@@ -14,6 +14,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "countup.js": "^1.9.3",
     "echarts": "^3.5.4",
     "element-ui": "^2.4.2",
