--- a/vue相关/vue-resource/package.json
+++ b/vue相关/vue-resource/package.json
@@ -18,6 +18,7 @@
     "countup.js": "^1.9.3",
     "echarts": "^3.5.4",
     "element-ui": "^2.4.2",
+    "kscreenshot": "^1.1.2",
     "mockjs": "^1.0.1-beta3",
     "normalize.css": "^8.0.0",
     "nprogress": "^0.2.0",
